security.tf
resource "aws_security_group" "web_sg" {
  name   = "Domino-SSH-Web Everyone"
  vpc_id = aws_vpc.some_custom_vpc.id

  // HTTP Port
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  // HTTPS Port
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  // SSH port
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  
  // Notes Port
  ingress {
    from_port   = 1352
    to_port     = 1352
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

   // LDAP Port
  ingress {
    from_port   = 389
    to_port     = 389
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }
}
